--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,213 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
+
+/* base styles */
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Quicksand";
+  color: #333;
+}
+.navbar {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  max-width: 800px;
+  margin: 0 auto;
+  border-bottom: 1px solid #f2f2f2;
+}
+.navbar h1 {
+  color: #f1356d;
+}
+.navbar .sublinks {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+}
+.navbar a {
+  margin-left: 20px;
+  text-decoration: none;
+  padding: 6px;
+}
+.navbar a:hover {
+  color: #f1356d;
+}
+.content {
+  max-width: 800px;
+  margin: 40px auto;
+  padding: 20px;
+}
+.btn-watch {
+  color: "white";
+  background-color: "#f1356d";
+  border-radius: "5px";
+  border: none;
+  padding: 10px 30px;
+  margin-top: 35px;
+  cursor: pointer;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.carousel {
+  height: 70vh;
+}
+/* movie previews / list */
+.movieContainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.movies-list {
+  display: grid;
+  grid-template-columns: repeat(4, 25%);
+  border-top: 1px solid #fafafa;
+}
+.movie-preview {
+  padding: 20px 5px;
+  margin: 5px;
+  transition: 500ms ease-in-out;
+  cursor: pointer;
+  border: 1px solid rgba(211, 211, 211, 0.678);
+}
+.movie-preview:hover {
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+  transform: scale(1.1);
+}
+.movie-preview h3 {
+  font-size: 20px;
+  color: #f1356d;
+  margin-bottom: 8px;
+}
+.movie-preview img {
+  max-width: 100%;
+}
+.movie-preview a {
+  text-decoration: none;
+}
+
+.MovieDetails h2 {
+  font-size: 30px;
+  color: #f1356d;
+  margin-bottom: 10px;
+  text-align: center;
+}
+.MovieDetails img {
+  max-width: 800px;
+}
+.MovieDetails div {
+  margin-top: 10px;
+  text-align: justify;
+  margin-bottom: 20px;
+}
+.MovieDetails p {
+  font-size: 18px;
+  margin-top: 10px;
+  font-weight: 350;
+}
+/*Form add new movie*/
+.create {
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: center;
+}
+.create label {
+  text-align: left;
+  display: block;
+}
+.create h2 {
+  font-size: 20px;
+  color: #f1356d;
+  margin-bottom: 30px;
+}
+.create input,
+.create textarea,
+.create select {
+  width: 100%;
+  padding: 6px 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+  display: block;
+}
+.create button,
+.MovieDetails button {
+  background-color: #f1356d;
+  color: #fff;
+  border: 0;
+  padding: 10px 30px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+/*Not Found page*/
+.not-found {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.not-found a {
+  text-decoration: none;
+  transition: 500ms ease;
+}
+.not-found a:hover {
+  color: #f1356d;
+}
+.not-found div {
+  font-size: 10rem;
+  font-weight: 600;
+
+  color: #f1356d;
+}
+/* new post */
+.newPost {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.newPost button {
+  color: #f1356d;
+  background-color: white;
+  border-radius: 50px;
+  padding: 10px 40px;
+  border: 1px solid #f1356d;
+  transition: 500ms ease-in-out;
+  cursor: pointer;
+}
+.newPost button a {
+  text-decoration: none;
+  color: #f1356d;
+  font-size: 15px;
+}
+/* sub carousel section */
+
+.musicList {
+  max-width: 800px;
+  margin-top: 50px;
+}
+.items {
+  height: 300px;
+  transition: 500ms ease-in-out;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
+.items img {
+  width: 90%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 1;
+}
+
+.items a {
+  text-decoration: none;
+}
+
+.items h3 {
+  text-align: center;
+  color: #f1356d;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50% 0);
+  width: 90%;
+}
+
+.items:hover {
+  transform: scale(1.1);
 }
